CB-4631. Refactor after review, added information about postgres database to backuper